@@ -2,4 +2,5 @@ Revision history for RPi-DigiPot-MCP4XXXX
 
 2.36.1 UNREL
         - WiringPi::API 2.36.3 and RPi::WiringPi::Constant 0.02 are prereqs
+        - added technical specifications
 
